<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp"
        android:background="@drawable/add_item_fragment_background"
        tools:context=".ui.fragment.AddItemFragment">

        <ImageView
            android:id="@+id/expandHandle"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="0.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avd_drag_expand"
            app:tint="@color/expand_icon_color"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/input_hint_name"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="182dp"
                android:drawablePadding="8dp"
                android:imeOptions="flagNoFullscreen|actionNext"
                android:inputType="text"
                android:maxLength="20"
                app:drawableStartCompat="@drawable/ic_cart"
                tools:text="Item name">

                <requestFocus />

            </com.google.android.material.textfield.MaterialAutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/input_hint_quantity"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="@id/name_layout"
            app:layout_constraintStart_toStartOf="@+id/name_layout"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:selectAllOnFocus="true"
                android:text="@string/input_def_quantity"
                app:drawableStartCompat="@drawable/ic_quantity"
                tools:text="Item quantity" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btnGrp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:checkedButton="@id/btn1"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constraintTop_toTopOf="@id/quantity_layout"
            app:layout_constraintBottom_toBottomOf="@id/quantity_layout"
            app:layout_constraintEnd_toEndOf="@id/quantity_layout">
            <!-- NOTE: The heights are set programmatically in Fragment::onViewCreated -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                style="@style/unitButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/qty_unit"
                android:textAllCaps="false"
                android:textColor="?colorOnSurface"
                tools:layout_height="62dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                style="@style/unitButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/qty_kilogram"
                android:textAllCaps="false"
                android:textColor="?colorOnSurface"
                tools:layout_height="62dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                style="@style/unitButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/qty_gram"
                android:textAllCaps="false"
                android:textColor="?colorOnSurface"
                tools:layout_height="62dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:hint="@string/input_hint_description"
            app:counterMaxLength="30"
            app:layout_constraintEnd_toEndOf="@id/quantity_layout"
            app:layout_constraintStart_toStartOf="@id/quantity_layout"
            app:layout_constraintTop_toBottomOf="@id/quantity_layout"
            tools:alpha="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:imeOptions="flagNoFullscreen"
                android:inputType="text"
                android:maxLength="30"
                app:drawableStartCompat="@drawable/ic_description"
                tools:text="Item description (optional)" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/checkbox_urgent"
            app:buttonCompat="@drawable/avd_urgent_check"
            app:layout_constraintStart_toStartOf="@+id/description_layout"
            app:layout_constraintTop_toBottomOf="@+id/description_layout"
            tools:alpha="1" />

        <!-- Start divider -->
        <View
            android:id="@+id/dividerStart"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:alpha="0"
            android:background="@drawable/vd_divider"
            app:layout_constraintEnd_toStartOf="@id/bought"
            app:layout_constraintStart_toStartOf="@id/quantity_layout"
            app:layout_constraintTop_toBottomOf="@id/urgent"
            tools:alpha="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:alpha="0"
            tools:alpha="1"
            app:layout_constraintBottom_toBottomOf="@id/dividerStart"
            app:layout_constraintEnd_toStartOf="@id/dividerEnd"
            app:layout_constraintStart_toEndOf="@id/dividerStart"
            app:layout_constraintTop_toBottomOf="@id/dividerStart"
            app:icon="@drawable/avd_expand"
            app:iconGravity="start"
            android:checkable="true"
            android:textColor="?colorOnSurface"
            app:iconTint="?colorOnSurface"
            android:text="@string/checkbox_purchased" />

        <!-- End divider -->
        <View
            android:id="@+id/dividerEnd"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:alpha="0"
            android:background="@drawable/vd_divider"
            app:layout_constraintEnd_toEndOf="@id/quantity_layout"
            app:layout_constraintStart_toEndOf="@id/bought"
            app:layout_constraintTop_toTopOf="@id/dividerStart"
            tools:alpha="1" />

        <!-- To change visibility of multiple views together -->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/bought_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="price_container,date_layout"
            tools:visibility="visible" />

        <!-- Container for price input and label (تومان, dollar) -->
        <FrameLayout
            android:id="@+id/price_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/description_layout"
            app:layout_constraintStart_toStartOf="@id/description_layout"
            app:layout_constraintTop_toBottomOf="@id/bought">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint_price"
                app:errorEnabled="true">

                <com.pleon.buyt.ui.TextInputEditTextWithSuffix
                    android:id="@+id/priceEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="number"
                    android:maxLength="17"
                    android:text="@string/input_suffix_price"
                    app:drawableStartCompat="@drawable/ic_price"
                    app:suffix="@string/input_suffix_price"
                    tools:text="Item price" />

            </com.google.android.material.textfield.TextInputLayout>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/input_hint_purchase_date"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/price_container"
            app:layout_constraintStart_toStartOf="@id/price_container"
            app:layout_constraintTop_toBottomOf="@id/price_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:editable="false"
                android:focusable="true"
                android:text="@string/input_def_purchase_date"
                app:drawableStartCompat="@drawable/ic_calendar"
                tools:text="Purchase date" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
