...
    <string name="snackbar_message_no_item_selected">No item selected</string>
    <string name="snackbar_message_no_store_found">No saved store! Cannot skip.</string>
    <string name="snackbar_message_start_over">Oops! Buyt was force killed. Please start over your buying process if possible.</string>
    <string name="menu_text_new_store_found">New store</string>
    <string name="menu_text_multiple_stores_found">%1$s stores around here</string>
    <string name="menu_text_multiple_stores_saved">%1$s stores</string>
    <string name="menu_title_select_store">Select store</string>
    <string name="menu_title_add_store">Add new store</string>
    <string name="input_hint_store_category">Category</string>
    <string name="button_text_view_on_map">View on map</string>
    <string name="menu_hint_add_item">Add item</string>
    <string name="menu_hint_skip_finding">Skip finding</string>
    <string name="menu_hint_reorder_items">Reorder items</string>
...

    <string name="chart_caption">Expenses per day</string>
    <string name="checkbox_purchased">Already Bought</string>
    <string name="checkbox_purchased_disabled">Already Bought (premium version only)</string>
    <string name="input_def_purchase_date">Today</string>
    <string name="input_hint_store_name">Store name</string>
    <string name="input_error_name">Name cannot be empty</string>
    <string name="input_error_store_name">Name cannot be empty</string>
    <string name="input_error_quantity">Quantity should be specified</string>
    <string name="input_error_price">Price should be specified</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_stores">Stores</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="no_filter">No filter</string>
...
