...
        app:layout_constraintTop_toTopOf="parent" />

    <!-- For fragment rounded corners and elevation see the
          background attribute on the root element of the fragment layout -->
    <!-- Set the height to the final height so the fragment will be visible on config change -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/frag_container_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="?colorSurface" />
...
        android:id="@+id/bar_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/bottom_bar"
            app:srcCompat="@drawable/avd_find" />

        <com.google.android.material.bottomappbar.BottomAppBar
...
