<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/avd_add_glow"
        android:title="@string/menu_hint_add_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/found_stores"
        android:title="Stores"
        android:visible="false"
        app:actionLayout="@layout/found_stores_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reorder_skip"
        android:icon="@drawable/avd_reorder_skip"
        android:title="@string/menu_hint_reorder_items"
        app:showAsAction="always" />
</menu>
